Fixed gap to be 16px (in both compact and comfortable modes)

--- a/src/internal/grid/styles.scss
+++ b/src/internal/grid/styles.scss
@@ -1,11 +1,9 @@
-@use "../../../node_modules/@cloudscape-design/design-tokens/index.scss" as cs;
-
 .grid {
   display: grid;
   justify-items: stretch;
   justify-content: stretch;
   align-content: stretch;
-  gap: cs.$space-scaled-m;
+  gap: 16px; // Can't use design tokens for the gap because it is used in calculations;
   grid-auto-rows: 100px;
 }
 
